# vebetterstats

./: LICENSE  README.md
apps/analytics/: README.md  pyproject.toml
apps/analytics/src/vbs_analytics/: app.py
apps/analytics/src/vbs_analytics/analysis/: reward_analyser.py
apps/analytics/src/vbs_analytics/b3tr/: b3tr_apps.py  b3tr_contracts.py  b3tr_event_decoders.py  b3tr_event_transformers.py  b3tr_events_defs.py  b3tr_impact_names.py  b3tr_models.py  b3tr_proof_parser.py  b3tr_round.py
apps/analytics/src/vbs_analytics/config/: app_config.py
apps/analytics/src/vbs_analytics/indexer/: contract_event.py  decoded_event.py  event_indexer.py  indexer_options.py  indexer_status.py  indexer_task.py  transformed_event.py
apps/analytics/src/vbs_analytics/thor/: raw_event.py  thor_client.py  thor_client_options.py
apps/analytics/src/vbs_analytics/utils/: units.py
